--- a/index.html
+++ b/index.html
@@ -202,13 +202,13 @@
                                 <div class="image-carousel" data-autoplay="true" data-interval="5000">
                                     <div class="carousel-container">
                                         <div class="carousel-slide">
-                                            <img src="images/图片1.webp" alt="GNSS拒止环境下的视觉定位技术 - 图1" class="w-full h-auto">
+                                            <img src="images/定位1.png" alt="GNSS拒止环境下的视觉定位技术 - 图1" class="w-full h-auto">
                                         </div>
                                         <div class="carousel-slide">
-                                            <img src="images/after1.jpg" alt="GNSS拒止环境下的视觉定位技术 - 图2" class="w-full h-auto">
+                                            <img src="images/定位3.png" alt="GNSS拒止环境下的视觉定位技术 - 图2" class="w-full h-auto">
                                         </div>
                                         <div class="carousel-slide">
-                                            <img src="images/图片1.webp" alt="GNSS拒止环境下的视觉定位技术 - 图3" class="w-full h-auto">
+                                            <img src="images/定位2.png" alt="GNSS拒止环境下的视觉定位技术 - 图3" class="w-full h-auto">
                                         </div>
                                     </div>
                                     <div class="carousel-prev">
@@ -246,13 +246,13 @@
                                 <div class="image-carousel" data-autoplay="true" data-interval="6000">
                                     <div class="carousel-container">
                                         <div class="carousel-slide">
-                                            <img src="images/图片1.webp" alt="视觉大模型辅助的灾情飞行任务自动规划 - 图1" class="w-full h-auto">
+                                            <img src="images/路径1.png" alt="视觉大模型辅助的灾情飞行任务自动规划 - 图1" class="w-full h-auto">
                                         </div>
                                         <div class="carousel-slide">
-                                            <img src="images/after1.jpg" alt="视觉大模型辅助的灾情飞行任务自动规划 - 图2" class="w-full h-auto">
+                                            <img src="images/路径2.png" alt="视觉大模型辅助的灾情飞行任务自动规划 - 图2" class="w-full h-auto">
                                         </div>
                                         <div class="carousel-slide">
-                                            <img src="images/图片1.webp" alt="视觉大模型辅助的灾情飞行任务自动规划 - 图3" class="w-full h-auto">
+                                            <img src="images/路径3.png" alt="视觉大模型辅助的灾情飞行任务自动规划 - 图3" class="w-full h-auto">
                                         </div>
                                     </div>
                                     <div class="carousel-prev">
@@ -292,7 +292,7 @@
                                     <div class="image-comparison-slider">
                                         <div class="image-comparison-container">
                                             <img src="images/before1.jpg" alt="Before image" class="image-comparison-before">
-                                            <img src="images/after1.jpg" alt="After image" class="image-comparison-after">
+                                            <img src="images/毁伤.png" alt="After image" class="image-comparison-after">
                                             <div class="image-comparison-slider-handle">
                                                 <div class="image-comparison-slider-handle-line"></div>
                                                 <div class="image-comparison-slider-handle-circle"></div>
@@ -400,7 +400,7 @@
     <!-- 页脚 -->
     <footer class="py-8 bg-secondary-900 text-secondary-400">
         <div class="container mx-auto px-4 text-center">
-            <p>© 2023 南京航空航天大学自动化学院. 保留所有权利.</p>
+            <p>© 2025 南京航空航天大学飞控所. 保留所有权利.</p>
         </div>
     </footer>
 
