--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
         </div>
     </section>
 
-    <!-- 团队成员部分 -->
+    <!-- 团队成员部分
     <section id="team" class="py-16 md:py-24 bg-white dark:bg-secondary-900">
         <div class="container mx-auto px-4">
             <h2 class="text-3xl md:text-4xl font-bold mb-12 text-center text-secondary-900 dark:text-white">团队成员</h2>
@@ -332,7 +332,7 @@
                             </tr>
                         </thead>
                         <tbody class="divide-y divide-secondary-200 dark:divide-secondary-700" id="authorTableBody">
-                            <!-- 这里将通过JavaScript动态填充 -->
+
                         </tbody>
                     </table>
                 </div>
@@ -350,13 +350,13 @@
                             </tr>
                         </thead>
                         <tbody class="divide-y divide-secondary-200 dark:divide-secondary-700" id="teacherTableBody">
-                            <!-- 这里将通过JavaScript动态填充 -->
+
                         </tbody>
                     </table>
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- 支撑材料部分 -->
     <section id="materials" class="py-16 md:py-24 bg-secondary-50 dark:bg-secondary-800">
